Set navigation bar to be fixed to top of screen at all times; modified `ContentSection` to align title with content on md or smaller screens

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -8,6 +8,13 @@ body {
     min-height: 100vh;
 }
 
+main {
+    padding-top: 5vh;
+}
+
+.main_layout_navbar {
+    height: 5vh;
+}
 
 .social-media-icon {
     width: 2.5rem;
